--- a/galleryproject/gallery/templates/gallery/about.html
+++ b/galleryproject/gallery/templates/gallery/about.html
@@ -1,16 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% if title %}
-        <title>Gallery - {{ title }}</title>
-    {% else %}
-        <title>Gallery</title>
-    {% endif %}
-</head>
-<body>
+{% extends 'gallery/base.html'%}
+{% block content %}
     <h1> About Page</h1>
-</body>
-</html>
+{% endblock %}
+    
