--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -1,37 +1,21 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-
-    {% if title %}
-        <title>Gallery - {{ title }}</title>
-    {% else %}
-        <title>Gallery</title>
-    {% endif %}
-
-</head>
-<body>
+{% extends 'gallery/base.html'%}
+{% block content %}
     <div class="container">
         <div class="row">
             <div class="col-md-3"><div class="card" style="width: 18rem;">
                 <div class="card-header">
-                  <h2>Categories</h2>
+                <h2>Categories</h2>
                 </div>
                 <ul class="list-group list-group-flush">
-                  <li class="list-group-item">An item</li>
-                  <li class="list-group-item">A second item</li>
-                  <li class="list-group-item">A third item</li>
+                <li class="list-group-item">An item</li>
+                <li class="list-group-item">A second item</li>
+                <li class="list-group-item">A third item</li>
                 </ul>
-              </div>
+            </div>
             </div>
             <div class="col-md-9">
                 <h2>Photo album</h2>
             </div>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
