--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -15,6 +15,16 @@
             </div>
             <div class="col-md-9">
                 <h2>Photo album</h2>
+                <div class="row">
+                    <div class="col-md-4">
+                        <div class="card">
+                            <img class="card-img-top" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
+                            <div class="card-body">
+                                <p class="card-text"></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
