add categories,images and View photo button functionality

--- a/galleryproject/gallery/templates/gallery/base.html
+++ b/galleryproject/gallery/templates/gallery/base.html
@@ -1,3 +1,4 @@
+{% load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,10 +13,19 @@
     {% else %}
         <title>Gallery</title>
     {% endif %}
+
+    {% block styles %}
+        <link rel="stylesheet" href="{% static 'css/static.css' %}">
+    {% endblock %}
 </head>
 <body>
+    {% include "navbar.html" %}
     <div class="container">
     {% block content %}{% endblock %}
     </div>
+    
+    {% block scripts %}
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    {% endblock %}
 </body>
 </html>
