update view photo function

--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -20,7 +20,7 @@
                 <div class="row">
                     <div class="col-md-4">
                         <div class="card my-2">
-                            <img class="card-img-top" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
+                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
                             <div class="card-body">
                                 <small>Category: Flowers</small>
                             </div>
@@ -29,7 +29,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card my-2">
-                            <img class="card-img-top" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
+                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
                             <div class="card-body">
                                 <small>Category: Flowers</small>
                             </div>
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card my-2">
-                            <img class="card-img-top" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
+                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
                             <div class="card-body">
                                 <small>Category: Flowers</small>
                             </div>
@@ -47,8 +47,7 @@
                     </div>
                     <div class="col-md-4">
                         <div class="card my-2">
-                            <img class="card-img-top" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
-                            
+                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
                             <div class="card-body">
                                 <small>Category: Flowers</small>
                             </div>
