--- a/galleryproject/gallery/static/css/static.css
+++ b/galleryproject/gallery/static/css/static.css
@@ -1,3 +1,17 @@
 h2 {
   color: blue;
 }
+
+.view {
+  height: 90vh;
+}
+
+.image {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.gallery-image {
+  height: 200px;
+  object-fit: cover;
+}
