add an addPhoto button

--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -12,6 +12,11 @@
                         <li class="list-group-item">Flowers</li>
                         <li class="list-group-item">Wild Animals</li>
                         <li class="list-group-item">Birds</li>
+
+                        <li class="list-group-item">
+                            <a href="{% url 'add'%}" class="btn btn-primary
+                             btn-sm m-1">Add Photos</a>
+                        </li>
                     </ul>
                 </div>
             </div>
