--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -13,10 +13,7 @@
                         <li class="list-group-item">Wild Animals</li>
                         <li class="list-group-item">Birds</li>
 
-                        <li class="list-group-item">
-                            <a href="{% url 'add'%}" class="btn btn-primary
-                             btn-sm m-1">Add Photos</a>
-                        </li>
+                        <a href="{% url 'add'%}" class="btn btn-primary btn-block btn-sm m-1">Add Photos</a>
                     </ul>
                 </div>
             </div>
