--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -9,10 +9,10 @@
                     </div>
                     <ul class="list-group list-group-flush">
                         <li class="list-group-item">All</li>
-                        <li class="list-group-item">Flowers</li>
-                        <li class="list-group-item">Wild Animals</li>
-                        <li class="list-group-item">Birds</li>
-
+                        {% for category in categories %}
+                        <li class="list-group-item">{{category.name}}</li>
+                        {% endfor %}
+                        
                         <a href="{% url 'add'%}" class="btn btn-primary btn-block btn-sm m-1">Add Photos</a>
                     </ul>
                 </div>
@@ -20,42 +20,20 @@
             <div class="col-md-9">
                 <h2>Photo album</h2>
                 <div class="row">
+
+                    {% for photo in photos %}
                     <div class="col-md-4">
                         <div class="card my-2">
-                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
+                            <img class="gallery-image" src="{{image.image.url}}" alt="red roses">
                             <div class="card-body">
-                                <small>Category: Flowers</small>
+                                <small>Category: {{image.category.name}}</small>
                             </div>
-                            <a href="{% url 'photo' 1%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
+                            <a href="{% url 'photo' image.id%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
                         </div>
                     </div>
-                    <div class="col-md-4">
-                        <div class="card my-2">
-                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
-                            <div class="card-body">
-                                <small>Category: Flowers</small>
-                            </div>
-                            <a href="{% url 'photo' 2%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card my-2">
-                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
-                            <div class="card-body">
-                                <small>Category: Flowers</small>
-                            </div>
-                            <a href="{% url 'photo' 3%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="card my-2">
-                            <img class="gallery-image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="red roses">
-                            <div class="card-body">
-                                <small>Category: Flowers</small>
-                            </div>
-                            <a href="{% url 'photo' 4%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
-                        </div>
-                    </div>
+                    {% empty %}
+                    <h3>No photos....</h3>
+                    {% endfor %}
                 </div>
             </div>
         </div>
