--- a/galleryproject/gallery/templates/gallery/viewphoto.html
+++ b/galleryproject/gallery/templates/gallery/viewphoto.html
@@ -6,7 +6,8 @@
             <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
             <div class="view">
                 <img class="image" src="https://www.1800flowers.com/blog/wp-content/uploads/2015/10/red-roses.jpg.webp" alt="">
-                <p>Bouquet of red roses</p>
+                
+                <p>{{photo.description}}</p>
             </div>
         </div>
     </div>
