--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -21,18 +21,18 @@
                 <h2>Photo album</h2>
                 <div class="row">
 
-                    {% for photo in photos %}
-                    <div class="col-md-4">
-                        <div class="card my-2">
-                            <img class="gallery-image" src="{{image.image.url}}" alt="red roses">
-                            <div class="card-body">
-                                <small>Category: {{image.category.name}}</small>
+                    {% for image in images %}
+                        <div class="col-md-4">
+                            <div class="card my-2">
+                                <img class="gallery-image" src="{{image.image.url}}" alt="red roses">
+                                <div class="card-body">
+                                    <small>Category: {{image.category.name}}</small>
+                                </div>
+                                <a href="{% url 'photo' image.id%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
                             </div>
-                            <a href="{% url 'photo' image.id%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
                         </div>
-                    </div>
-                    {% empty %}
-                    <h3>No photos....</h3>
+                        {% empty %}
+                        <h3>No photos....</h3>
                     {% endfor %}
                 </div>
             </div>
