--- a/galleryproject/static/css/static.css
+++ b/galleryproject/static/css/static.css
@@ -15,3 +15,12 @@ h2 {
   height: 200px;
   object-fit: cover;
 }
+
+body {
+  background-image: url(../images/background.webp);
+}
+
+.card {
+  border-radius: 15px;
+  font-weight: bold;
+}
