--- a/galleryproject/gallery/templates/gallery/addphoto.html
+++ b/galleryproject/gallery/templates/gallery/addphoto.html
@@ -5,6 +5,7 @@
             <a href="{% url 'gallery' %}" class="btn btn-dark my-3">Go Back</a>
             <div class="card ">
                 <form method='POST' action="">
+                    {% csrf_token %}
 
                     <div class="form-group m-3">
                         <label>Description</label>
