--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -8,9 +8,15 @@
                     <h2>Categories</h2>
                     </div>
                     <ul class="list-group list-group-flush">
-                        <li class="list-group-item">All</li>
+                        <li class="list-group-item">
+                            <a href="{% url 'gallery'%}">All</a>
+                        </li>
                         {% for category in categories %}
-                        <li class="list-group-item">{{category.name}}</li>
+                        <li class="list-group-item">
+                            <a href="{% url 'gallery'%}?category={{category.name}}">
+                                {{category.name}}
+                            </a>
+                        </li>
                         {% endfor %}
                         
                         <a href="{% url 'add'%}" class="btn btn-primary btn-block btn-sm m-1">Add Photos</a>
