--- a/galleryproject/gallery/templates/navbar.html
+++ b/galleryproject/gallery/templates/navbar.html
@@ -10,8 +10,20 @@
           <a class="nav-item nav-link" href="/about">About</a>
       </div>
       <div class="navbar-nav">
-        <a class="nav-item nav-link" href="#">Login</a>
-        <a class="nav-item nav-link" href="#">Register</a>
+        <a class="nav-item nav-link" href="/admin">Admin</a>
       </div>
+    </div>
+    <div class="col-sm-4 col-md-4 navbar-right">
+
+      <form class="navbar-form" role="search" action="{% url 'search_results' %}">
+
+        <div class="input-group">
+          <input type="text" class="form-control" placeholder="Search by category" name="article">
+          <div class="input-group-btn">
+            <button class="btn btn-default" type="submit"><i class="glyphicon glyphicon-search"></i></button>
+          </div>
+        </div>
+
+      </form>
     </div>
   </nav>
