--- a/galleryproject/gallery/templates/gallery/home.html
+++ b/galleryproject/gallery/templates/gallery/home.html
@@ -33,7 +33,29 @@
                                 <div class="card-body">
                                     <small>Category: {{image.category.name}}</small>
                                 </div>
-                                <a href="{% url 'photo' image.id%}" class="btn btn-outline-primary btn-sm m-1" href="">View photo</a>
+                                <a href="{% url 'photo' image.id%}" class="btn btn-outline-primary btn-sm m-1" href="">View <small>in new tab</small> </a>
+                                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                                    View Photo
+                                </button>
+                            </div>
+                        </div>
+                        <!-- Modal -->
+                        <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                            <div class="modal-dialog">
+                            <div class="modal-content">
+                                <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                </div>
+                                <div class="modal-body">
+                                    <img class="image" src="{{image.image.url}}" alt="">
+                                    <p>{{image.description}}</p>
+                                </div>
+                                <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                <button type="button" class="btn btn-primary">Save changes</button>
+                                </div>
+                            </div>
                             </div>
                         </div>
                         {% empty %}
@@ -43,4 +65,5 @@
             </div>
         </div>
     </div>
+
 {% endblock %}
