--- a/galleryproject/gallery/templates/gallery/viewphoto.html
+++ b/galleryproject/gallery/templates/gallery/viewphoto.html
@@ -9,4 +9,17 @@
             </div>
         </div>
     </div>
+    <button type="button" name="button" class="btn btn-info" value="{{image.image.url}}" onclick="copylink(this.value)">Copy Image Link</button>
+    <script>
+            function copylink(value) {
+                console.log('hi yellow')
+                function handler(event){
+                    event.clipboardData.setData('text/plain', value);
+                    event.preventDefault();
+                    document.removeEventListener('copy', handler, true);
+                }
+                document.addEventListener('copy', handler, true);
+                document.execCommand('copy');
+            }
+    </script>
 {% endblock %}
